--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@mantine/core": "^7.10.2",
     "@mantine/hooks": "^7.10.2",
     "@mantine/next": "^6.0.21",
+    "@reduxjs/toolkit": "^2.2.5",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
