--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@mantine/hooks": "^7.10.2",
     "@mantine/next": "^6.0.21",
     "@reduxjs/toolkit": "^2.2.5",
+    "interweave": "^13.1.0",
     "next": "14.2.4",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
